--- a/src/landing/Landing.css
+++ b/src/landing/Landing.css
@@ -111,7 +111,7 @@
     outline: none;
     -webkit-box-shadow: none;
     box-shadow: none;
-    width: 100vw;
+    width: 100%;
     height: 10vh;
     color: transparent;
     cursor: default;
