--- a/src/portfolio/Portfolio.css
+++ b/src/portfolio/Portfolio.css
@@ -23,17 +23,17 @@
     background-size: cover;
     background-position: top;
     height: 60vh;
-    min-width: 10em;
-    width: calc(100% / 4);
+    /*min-width: 10em;*/
+    width: calc(100%/4);
     margin: 0.5em;
     filter: saturate(0);
 }
 
 .item-overlay {
-    position: absolute;
+    position: relative;
     background: white;
-    height: 100%;
     width: 100%;
+    height: 100%;
     z-index: 10;
     opacity: 0;
     transition: 0.1s all ease;
@@ -43,24 +43,17 @@
     opacity: 0.33;
 }
 
-.portfolio-item:not(:hover){
-}
-
-.hidden {
-    position: absolute;
-    transition: 0.2s;
-}
-
 .portfolio-item-name {
-    position: absolute;
-    top: calc(50%);
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgba(0,0,0,0.9);
+    position: relative;
     width: 100%;
+    top: 50%;
+    left: 0;
+    background-color: rgba(0,0,0,0.9);
     font-size: 1.5em;
-    padding: 8px;
+    padding: 10px 0;
 }
 
 @media screen and (max-width: 560px) {
@@ -77,8 +70,6 @@
         width: 100%;
         max-height: 300px;
         min-height: 300px;
-        height: auto;
-
     }
 
     .portfolio-item:hover .item-overlay {
